# utt

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.docker  README.md  TODO.md  install-libutt.sh  install_deps.sh  repo.key  utt_pvt_replica_2
aws/: batch-plots.csv  comm_config.txt  logs-clients4-0.txt  plots.csv  run.sh  setup.sh
aws/1client/: logs-clients4-0.txt  logs0.txt  logs3.txt
aws/20clients/: logs-clients11-7.txt  logs-clients12-8.txt  logs-clients15-1.txt  logs-clients20-6.txt  logs-clients21-7.txt  logs-clients22-8.txt  logs-clients5-1.txt  logs-clients6-2.txt  logs-clients7-3.txt  logs-clients8-4.txt  logs-clients9-5.txt
aws/30clients/: logs-clients10-6.txt  logs-clients11-7.txt  logs-clients14-0.txt  logs-clients16-2.txt  logs-clients17-3.txt  logs-clients18-4.txt  logs-clients19-5.txt  logs-clients20-6.txt  logs-clients21-7.txt  logs-clients22-8.txt  logs-clients23-9.txt  logs-clients24-0.txt  logs-clients28-4.txt  logs-clients30-6.txt  logs-clients4-0.txt  logs-clients5-1.txt
aws/4clients/: logs-clients4-0.txt  logs-clients7-3.txt
aws/8clients/: logs-clients10-6.txt  logs-clients11-7.txt  logs-clients12-8.txt  logs-clients13-9.txt  logs-clients6-2.txt  logs-clients7-3.txt
bftclient/src/: bft_client.cpp  msg_receiver.cpp
bftclient/test/: bft_client_api_tests.cpp
bftengine/: CMakeLists.txt
bftengine/src/quickpay/: CMakeLists.txt  QuickPay.cpp  QuickPay.hpp
bftengine/src/quickpay/messages/: ClientQuickPayRequestMsg.cpp  ClientQuickPayRequestMsg.hpp
important-logs/multi-client-fail-nologs/: logs1.txt  logs10.txt  logs2.txt  logs3.txt  logs4.txt  logs5.txt  logs6.txt  logs7.txt  logs8.txt  logs9.txt
kvbc/test/: CMakeLists.txt
libutt/: .gitignore  .gitmodules  LICENSE
libutt/prize-winning-stuff/: OldCoin.h
tests/: CMakeLists.txt
tests/BCB/: CMakeLists.txt  common.hpp
tests/BCB/fullpay-ft/TesterClientFull/: CMakeLists.txt  conn.cpp  conn.hpp  main.cpp  options.cpp  options.hpp  protocol.cpp  protocol.hpp
tests/BCB/fullpay-tworound/: CMakeLists.txt
tests/BCB/fullpay-tworound/TesterClientFull/: CMakeLists.txt  conn.cpp  conn.hpp  main.cpp  options.cpp  options.hpp  protocol.cpp  protocol.hpp
tests/BCB/fullpay-tworound/TesterReplicaFull/: CMakeLists.txt  conn.cpp  conn.hpp  main.cpp  options.cpp  options.hpp  protocol.cpp  protocol.hpp
tests/BCB/fullpay-tworound/common/: defs.hpp
tests/BCB/fullpay-tworound/scripts/: runMultiClients.sh  runMultiReplicas.sh
tests/BCB/fullpay/TesterClientFull/: CMakeLists.txt  conn.cpp  conn.hpp  main.cpp  options.hpp  protocol.cpp  protocol.hpp
tests/BCB/fullpay/TesterReplicaFull/: CMakeLists.txt  config.cpp  conn.cpp  conn.hpp  main.cpp  protocol.hpp
tests/BCB/quickpay/TesterClient/: CMakeLists.txt  conn.hpp  main.cpp  options.cpp  options.hpp  protocol.cpp  protocol.hpp
tests/BCB/quickpay/TesterReplica/: CMakeLists.txt  config.hpp
tests/Sharding/: CMakeLists.txt  common.hpp
tests/Sharding/Client/: CMakeLists.txt  config.hpp  conn.cpp  conn.hpp  main.cpp  options.cpp  options.hpp  protocol.cpp  protocol.hpp
tests/Sharding/Replica/: CMakeLists.txt  config.hpp  conn.cpp  conn.hpp  main.cpp  options.cpp  options.hpp  protocol.cpp  protocol.hpp
tests/Sharding/common/: defs.hpp  load_keys.hpp
tests/Sharding/scripts/: runMultiClients.sh  runMultiReplicas.sh
tests/cleanEcash/: CMakeLists.txt
tests/config/: config_file_parser.cpp  test_comm_config.cpp  test_comm_config.hpp  (+1 more)
tests/ecash/TesterClient/: CMakeLists.txt
tests/ecash/TesterClient/include/: Msg.h  base_types.h  client.h  config.h  receiver.h
tests/ecash/TesterClient/src/: Msg.cpp  client.cpp  config.cpp  main.cpp  receiver.cpp
tests/ecash/TesterReplica/: CMakeLists.txt
tests/ecash/TesterReplica/include/: CommandsHandler.hpp  Config.h  ReplicaImpl.hpp
tests/ecash/TesterReplica/src/: CommandsHandler.cpp  ReplicaImpl.cpp  main.cpp
tests/quickpay/: CMakeLists.txt
tests/quickpay/ShardTester/: CMakeLists.txt  main.cpp
tests/quickpay/TesterClient/: CMakeLists.txt  Messages.hpp  common.hpp  config.hpp  conn.cpp  conn.hpp  main.cpp  options.cpp  options.hpp  protocol.cpp  protocol.hpp
tests/quickpay/TesterClientFull/: CMakeLists.txt  main.cpp
tests/quickpay/TesterReplica/: CMakeLists.txt  config.hpp  conn.cpp  conn.hpp  main.cpp  options.cpp  options.hpp  protocol.cpp  protocol.hpp
tests/quickpay/Tx/: CMakeLists.txt  common.cpp  main.cpp  setup.cpp  setup.hpp  verifier.cpp  verifier.hpp
tests/quickpay/scripts/: comm_config  gen-net-conf.sh  perf-logging.properties  runClients.sh  runClientsFull.sh  runReplicas.sh  runReplicasFull.sh
tests/simpleEcash/: CMakeLists.txt  Msg.hpp  adapter_config.hpp  client.cpp  client_pool.hpp  ecash_client.cpp  ecash_client.hpp  msg_receiver.cpp  msg_receiver.h  replica.cpp  simple_test_client.hpp  simple_test_replica.hpp  simple_test_replica_behavior.hpp  state.cpp  state.hpp
tests/simpleEcash/scripts/: comm_config  runClient.sh  runDebugReplicas.sh  runReplicas.sh
tests/simpleKVBC/UTTClient/: CMakeLists.txt  adapter_config.cpp  client.cpp  ecash_client.cpp  ecash_client.hpp  simple_test_client.hpp  state.cpp  state.hpp
tests/simpleUTT/: CMakeLists.txt  basicRandomTestsRunner.cpp  basicRandomTestsRunner.hpp
tests/simpleUTT/TesterCRE/: CMakeLists.txt
tests/simpleUTT/TesterReplica/: CMakeLists.txt  internalCommandsHandler.cpp  internalCommandsHandler.hpp  setup.cpp
tests/simpleUTT/UTTClient/: CMakeLists.txt  ecash_client.cpp  simple_test_client.hpp
tests/simpleUTT/scripts/: runMultiClients.sh  runMultiReplicas.sh  runReplicas.sh
tools/: CMakeLists.txt  GenerateConcordKeys.cpp  GenerateUTTKeys.cpp
utt_bft/: CMakeLists.txt
utt_bft/include/: ThresholdParamGen.hpp  bft.hpp
utt_bft/include/client/: IClient.hpp  Params.hpp
utt_bft/include/msg/: QuickPay.hpp  ShardTx.hpp
utt_bft/include/replica/: Params.hpp
utt_bft/src/: QuickPayMsg.cpp  ThresholdParamGen.cpp
utt_bft/src/client/: IClient.cpp  Params.cpp
utt_bft/src/replica/: Params.cpp
utt_bft/tests/: CMakeLists.txt  TestMintFlow.cpp  TestPayFlow.cpp  TestQuickPay.cpp  TestSerialization.cpp
(+117 files in other folders)
